...

  const openRecentActivityCalendar = useCallback(() => {
    navigation.navigate('RecentActivityCalendar');
  }, [navigation]);

  return (
    <View testID="home-screen" style={styles.root}>
      <StatusBar barStyle="light-content" translucent backgroundColor="transparent" />

      <ScrollView
        style={styles.scroll}
        showsVerticalScrollIndicator={false}
        refreshControl={
...
