...
      </View>
      <View style={styles.bottomRow}>
        <View style={styles.balanceCol}>
          <Text style={styles.balanceValue} numberOfLines={1}>
            {balanceMasked ? '$**.**' : formatCurrency(balance)}
          </Text>
          <Text style={styles.balanceLabel}>Saldo</Text>
        </View>
      </View>
    </View>
  );
}

...
